--- a/about.html
+++ b/about.html
@@ -6,11 +6,12 @@
     <title>Elegant Yachting Tours - About Us</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/c85f64a73a.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div>
+    <header>   <!-- Nav used to section out 'navigation' section at the top of a page. Nav is also 'semantic', meaning it describe content -->
         <nav>
             <ul>
             <li><a href="home.html">Home</a></li>
@@ -20,7 +21,37 @@
             <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
-    </div>
-    <h1>About Us</h1>
+        <div id="aboutussection">   
+            <img src="/images/yacht1.jpg" id="aboutusimg">
+            <div class="aboutustext">
+                <h2>About Us</h2 id>          
+                    <p>Welcome to Elegant Yachting Tours, where luxury and adventure meet on the open sea. We offer unforgettable, 
+                    personalized yacht experiences — from private charters and scenic day cruises to sunset tours and special event packages.</p>
+                <h2>Our Story</h2>
+                        <p>Founded by passionate sailors and hospitality experts, Elegant Yachting Tours was created to share the 
+                            beauty of the ocean with others. What began as a small, family-run business has grown into a trusted name for high-end yacht experiences, 
+                            always focused on comfort, style, and exceptional service.</p>
+                <h2>Why Choose Us?</h2>
+                        <ul>
+                            <li>Luxury Yachts with modern amenities</li>
+                            <li>Tailored Experiences designed around you</li>
+                            <li>Professional Crew dedicated to safety and service</li>
+                            <li>Breathtaking Destinations only accessible by sea</li>
+                        </ul>
+                <h2>Our Promise</h2>
+                    <p>At Elegant Yachting Tours, we do more than offer trips — we create lasting 
+                        memories on the water. Join us for an experience that's as elegant as it is unforgettable.</p>
+
+            </div>
+        </div>
+    </header>
+    <footer class="footer">
+        <p>Elegant Yachting Tours. All rights reserved 2025.</p>
+        <div class="footer-icons">
+            <a href="https:www.facebook.com/" target=_blank><i class="fa-brands fa-facebook"></i></a>
+            <a href="https:www.instagram.com/" target=_blank><i class="fa-brands fa-instagram"></i></a>
+            <a href="https:www.youtube.com/" target=_blank><i class="fa-brands fa-youtube"></i></a>
+        </div>
+    </footer>   
 </body>
-</html>
+</html> 
