--- a/gallery.html
+++ b/gallery.html
@@ -6,21 +6,89 @@
     <title>Elegant Yachting Tours - Gallery</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/c85f64a73a.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav>
-        <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="tours.html">Our Tours</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-    </nav>
+    <header>   <!-- Nav used to section out 'navigation' section at the top of a page. Nav is also 'semantic', meaning it describe content -->
+        <nav>
+            <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="tours.html">Our Tours</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+        <div class="main-gallery-container">
+            <h2>Gallery</h2>
+            <div class="gallery">
+                <figure>
+                    <img 
+                    src="/images/gallery1.jpg" 
+                    alt="Topdown view of yacht sailing along sandy beach"
+                    title="Topdown view of yacht sailing along sandy beach">
+                    <figcaption>
+                        Yacht sailing along sandy beach
+                    </figcaption>
+                </figure>
 
-    <h1>Gallery</h1>
+                <figure>
+                    <img src="/images/gallery2.jpg" 
+                    alt="White yacht sailing on blue waters through valley"
+                    title="White yacht sailing on blue waters through valley">
+                    <figcaption>
+                        White yacht sailing on blue waters through valley
+                    </figcaption>
+                </figure>
 
+                <figure>  
+                    <img src="/images/gallery3.jpg" 
+                    alt="Old dhingey on sunny blue reflective waters"
+                    title="Old dhingey on sunny blue reflective waters">
+                    <figcaption>
+                        Old dhingey on sunny blue reflective waters
+                    </figcaption>  
+                </figure>
+             
+                <figure>
+                   <img src="/images/gallery4.webp" 
+                    alt="Yacht sailing on sunny blue reflective waters past a palm tree"
+                    title="Yacht sailing on sunny blue reflective waters past a palm tree">
+                    <figcaption>
+                        Yacht sailing on sunny blue reflective waters past a palm tree
+                    </figcaption>
+                </figure>
+
+                <figure>
+                    <img src="/images/gallery5.jpg" 
+                    alt="Sunny, sandy beach with palm trees and boats in the background"
+                    title="Sunny, sandy beach with palm trees and boats in the background">
+                    <figcaption>
+                        Sunny, sandy beach with palm trees and boats in the background
+                    </figcaption>
+                </figure>
+
+                <figure>
+                    <img src="/images/gallery6.jpg" 
+                    alt="Yachting sailing on waters at dusk"
+                    title="Yachting sailing on waters at dusk">
+                    <figcaption>
+                        Yachting sailing on waters at dusk
+                    </figcaption>
+                </figure>
+
+            </div>     
+        </div>
+    </header>
+    <footer class="footer">
+        <p>Elegant Yachting Tours. All rights reserved 2025.</p>
+        <div class="footer-icons">
+            <a href="https:www.facebook.com/" target=_blank><i class="fa-brands fa-facebook"></i></a>
+            <a href="https:www.instagram.com/" target=_blank><i class="fa-brands fa-instagram"></i></a>
+            <a href="https:www.youtube.com/" target=_blank><i class="fa-brands fa-youtube"></i></a>
+        </div>
+    </footer>   
 </body>
-</html>
+</html> 
