--- a/home.html
+++ b/home.html
@@ -8,9 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/c85f64a73a.js" crossorigin="anonymous"></script>
 </head>
 <body>
-        <!-- Nav used to section out 'navigation' section at the top of a page. Nav is also 'semantic', meaning it describe content -->
+    <header>   <!-- Nav used to section out 'navigation' section at the top of a page. Nav is also 'semantic', meaning it describe content -->
         <nav>
             <ul>
             <li><a href="home.html">Home</a></li>
@@ -26,11 +27,16 @@
             experience, ensuring you witness the beauty and tranquility of the sea. Join us on a voyage of discovery and indulgence in the luxury
             that only Elegant Yachting Tours can offer!
             </p>
+            <a href="tours.html"><button id="homebutton">Start Here!</button></a>
         </div>
+    </header>
     <footer class="footer">
-        <p>Elegant Yachting Tours. All rights reserved.</p>
-        <p></p>
-        <p></p>
+        <p>Elegant Yachting Tours. All rights reserved 2025.</p>
+        <div class="footer-icons">
+            <a href="https:www.facebook.com/" target=_blank><i class="fa-brands fa-facebook"></i></a>
+            <a href="https:www.instagram.com/" target=_blank><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target=_blank><i class="fa-brands fa-youtube"></i></a>
+        </div>
     </footer>   
 </body>
 </html> 
