--- a/tours.html
+++ b/tours.html
@@ -6,10 +6,11 @@
     <title>Elegant Yachting Tours - Our Tours</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/c85f64a73a.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body>  
     <nav>
         <ul>
         <li><a href="home.html">Home</a></li>
@@ -20,7 +21,55 @@
         </ul>
     </nav>
 
-    <h1>Our Tours</h1>
+        <section class="toursmain">
+            <div class="tourcontent">
+                <h2>Tour 1: Island Hopping Adventure</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Corporis maxime fugit officia vel, quos atque quibusdam 
+                    modi cum explicabo iste quas soluta excepturi iure facere 
+                    harum ipsa eligendi? Iusto, quisquam!</p>
+                    <div class="tourbuttoncontainer">
+                        <button class="tourbutton">Learn More</button>
+                    </div>
+            </div>
 
+        </section>
+            
+        <section class="toursmain">
+            <div class="tourcontent">
+                <h2>Tour 2: Sunset Sail Experience</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Corporis maxime fugit officia vel, quos atque quibusdam 
+                    modi cum explicabo iste quas soluta excepturi iure facere 
+                    harum ipsa eligendi? Iusto, quisquam!</p>
+                    <div class="tourbuttoncontainer">
+                        <button class="tourbutton">Learn More</button>
+                    </div> 
+            </div>
+
+        </section>
+
+        <section class="toursmain">
+            <div class="tourcontent">
+                <h2>Tour 3: Coastal Cuisine Cruise</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Corporis maxime fugit officia vel, quos atque quibusdam 
+                    modi cum explicabo iste quas soluta excepturi iure facere 
+                    harum ipsa eligendi? Iusto, quisquam!</p>
+                    <div class="tourbuttoncontainer">
+                        <button class="tourbutton">Learn More</button>
+                    </div>
+            </div>
+
+        </section>
+
+    <footer class="footer">
+        <p>Elegant Yachting Tours. All rights reserved 2025.</p>
+        <div class="footer-icons">
+            <a href="https:www.facebook.com/" target=_blank><i class="fa-brands fa-facebook"></i></a>
+            <a href="https:www.instagram.com/" target=_blank><i class="fa-brands fa-instagram"></i></a>
+            <a href="https:www.youtube.com/" target=_blank><i class="fa-brands fa-youtube"></i></a>
+        </div>
+    </footer>   
 </body>
-</html>
+</html> 
